[package]
name = 'pallet-chaos'
version = '3.0.0-monthly-2021-10'
description = 'FRAME pallet template for defining custom runtime logic.'
authors = ["Parity Technologies <admin@parity.io>"]
edition = '2018'
license = 'AGPL-3.0'
publish = false
repository = 'https://github.com/paritytech/pallet-chaos'

[package.metadata.docs.rs]
targets = ['x86_64-unknown-linux-gnu']

[dependencies.codec]
default-features = false
features = ['derive']
package = 'parity-scale-codec'
version = '2.0.0'

[dependencies.scale-info]
default-features = false
features = ['derive']
version = '1.0'

[dependencies.frame-benchmarking]
default-features = false
git = 'https://github.com/gluwa/substrate.git'
optional = true
version = '4.0.0-dev'
rev = "973dd744f5f7c6322799bbfa29366588e0267b0a"

[dependencies.frame-support]
default-features = false
git = 'https://github.com/gluwa/substrate.git'
version = '4.0.0-dev'
rev = "973dd744f5f7c6322799bbfa29366588e0267b0a"

[dependencies.frame-system]
default-features = false
git = 'https://github.com/gluwa/substrate.git'
version = '4.0.0-dev'
rev = "973dd744f5f7c6322799bbfa29366588e0267b0a"

[dev-dependencies.sp-core]
default-features = false
git = 'https://github.com/gluwa/substrate.git'
version = '4.1.0-dev'
rev = "973dd744f5f7c6322799bbfa29366588e0267b0a"

[dev-dependencies.sp-io]
default-features = false
git = 'https://github.com/gluwa/substrate.git'
version = '4.0.0-dev'
rev = "973dd744f5f7c6322799bbfa29366588e0267b0a"

[dev-dependencies.sp-runtime]
default-features = false
git = 'https://github.com/gluwa/substrate.git'
version = '4.1.0-dev'
rev = "973dd744f5f7c6322799bbfa29366588e0267b0a"

[features]
default = ['std']
runtime-benchmarks = ['frame-benchmarking']
std = [
    'codec/std',
    'scale-info/std',
    'frame-support/std',
    'frame-system/std',
    'frame-benchmarking/std',
]
try-runtime = ['frame-support/try-runtime']
